css/site.css
/**
 * site.css - stylesheet for the Caltech Library's Digital Library Development Group's sandbox.
 *
 * orange: #FF6E1E;
 *
 * Secondary pallet:
 *
 * lightgrey: #C8C8C8
 * grey: #76777B
 * darkgrey: #616265
 * slategrey: #AAA99F
 *
 * Impact Pallete see: http://identity.caltech.edu/web/colors
 */
body {
     margin: 0;
     border: 0;
     padding: 0;
     width: 100%;
     height: 100%;
     color: black;
     background-color: white;
     font-family: Open Sans, Helvetica, Sans-Serif;
     font-size: 14px;
}

header {
     position: relative;
     display: block;
     color: white;
     background-color: white;
     z-index: 2;
     height: 105px;
     vertical-align: middle;
}

header img {
     position: relative;
     display: inline;
     padding-left: 20px;
     margin: 0;
     height: 42px;
     padding-top: 32px;
}

header h1 {
     position: relative;
     display: inline-block;
     margin: 0;
     border: 0;
     padding: 0;
     font-size: 3em;
     font-weight: normal;
     vertical-align: 0.78em;
     color: #FF6E1E;
}

header a, header a:link, header a:visited, header a:active, header a:hover, header a:focus {
     color: #FF6E1E;
     background-color: inherit;
}


a, a:link, a:visited {
     color: #76777B;
     background-color: inherit;
     text-decoration: none;
}

a:active, a:hover, a:focus {
    color: #FF6E1E;
    font-weight: bolder;
}

nav {
     position: relative;
     display: block;
     width: 100%;
     margin: 0;
     padding: 0;
     font-size: 0.78em;
     vertical-align: middle;
     color: black;
     background-color: #AAA99F; /* #76777B;*/
     text-align: left;
}

nav div {
     display: inline-block;
     /* padding-left: 10em; */
     margin-left: 10em;
     margin-right: 0;
}

nav a, nav a:link, nav a:visited, nav a:active {
     color: white;
     background-color: inherit;
     text-decoration: none;
}

nav a:hover, nav a:focus {
     color: #FF6E1E;
     background-color: inherit;
     text-decoration: none;
}


nav div h2 {
     position: relative;
     display: block;
     min-width: 20%;
     margin: 0;
     font-size: 1.24em;
     font-style: normal;
}

nav div > ul {
     display: none;
     padding-left: 0.24em;
     text-align: left;
}

nav ul {
     display: inline-block;
     padding-left: 0.24em;
     list-style-type: none;
     text-align: left;
     text-decoration: none; 
}

nav ul li {
     display: inline;
     padding: 1em;
}

section {
     position: relative;
     display: inline-block;
     width: auto;
     max-width: 98%;
     height: 100%;
     color: black;
     background-color: white;
     margin: 0;
     padding-top: 0;
     padding-bottom: 2em;
     padding-left: 1em;
     padding-right: 0;
}

section h1 {
    font-size: 1.32em;
}

section h2 {
    font-size: 1.12em;
    font-style: italic;
}

section h3 {
    font-size: 1em;
    text-transform: uppercase;
}

section ul {
    list-style-type: disc;
}


section a, section a:link, section a:visited {
    font-style: italic;
    font-weight: normal;
}

section a:active, section a:hover, section a:focus {
    /* orange: #FF6E1E; */
    color: #FF6E1E;
}

aside {
     margin: 0;
     border: 0;
     padding-left: 1em;
     position: relative;
     display: inline-block;
     text-align: right;
}

aside h2 {
     font-size: 1em;
     text-transform: uppercase;
}

aside h2 > a {
     font-style: normal;
}

aside ul {
     margin: 0;
     padding: 0;
     display: block;
     list-style-type: none;
}

aside ul li {
     font-size: 0.82em;
}

aside ul > ul {
     padding-left: 1em;
     font-size: 0.72em;
}

footer {
     position: fixed;
     bottom: 0;
     display: block;
     width: 100%;
     height: 2em;
     color: white;
     background-color: #616265;

     font-size: 80%;
     text-align: left;
     vertical-align: middle;
     z-index: 2;
}

footer h1, footer span, footer address {
     position: relative;
     display: inline-block;
     margin: 0;
     padding-left: 0.24em;
     font-family: Open Sans, Helvetica, Sans-Serif;
     font-size: 1em;
}

footer h1 {
     font-weight: normal;
}

footer a, footer a:link, footer a:visited, footer a:active, footer a:focus, footer a:hover {
     padding: 0;
     display: inline;
     margin: 0;
     color: #FF6E1E;
     text-decoration: none;
}

.announcement {
    color: black;
    background-color: yellow;
    padding: 1em;
    margin-top: 2em;
    margin-bottom: 0em;
    margin-left: 0em;
    margin-right: 0em;
    text-overflow: ellipsis;
    border: 1px solid black;
}

/*
.article-result, .publication-result, .book_section-result {
    margin-bottom: 1.24em;
}
*/


/*
 * Search box and results layout
 */
.search-box {
    display: block;
}

.search-box div {
    display: block;
}

.search-box div label {
    vertical-align: top;
}

.search-go-button {
    display: block;
}

.search-go-button input {
    text-align: center;
    margin: 0.24em;
}

.search-result-pager {
    padding-top: 1.24em;
    padding-bottom: 1.24em;
}

.search-results {
    margin-top:0;
    margin-bottom:0;
    margin-left: 0;
    margin-right: 1.24em;
    padding: 0;
}
.search-result {
    padding-top: 0.24em;
    padding-bottom: 1.24em;
}

.search-result:nth-child(odd) {
    background-color: lightgrey;
}

.field-name, .matched-name, .index-name {
    display: inline-block;
    width: 6%;
    margin-right: 1.24em;
    text-transform: lowercase;
    text-align: right;
    vertical-align: top;
}

.field-value, .matched-value, .index-value {
    display: inline-block;
    text-align: left;
    vertical-align: top;
}

.index-name, .index-value {
    font-style: italic;
    font-size: smaller;
}

